--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,14 @@ tags: contact
       <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit }}</button>
     </form>
   {% else %}
-    <form method="POST" action="http://formspree.io/alistinnie@gmail.com">
-      <input type="email" name="email" placeholder="your email">
-      <textarea name="message" placeholder="your message"></textarea>
-      <button type="submit">Send</button>
-     </form>
+    <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
+      <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
+      <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}" style="resize: vertical"></textarea>
+      <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
+      <input type="hidden" name="_subject" value="{{ site.text.contact.subject }}" />
+      <input type="text" name="_gotcha" style="display:none" />
+      <input type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit }}">
+    </form>
   {% endif %}
 </div>
 
