--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,15 @@ tags: contact
     </form>
   {% else %}
     <form action="https://formspree.io/alistinnie@gmail.com" method="POST" class="form-stacked">
-      <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
-      <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}" style="resize: vertical"></textarea>
+      <label>
+        Email
+        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email | default: "Email Address" }}">
+      </label>
+      <label>
+        Content
+        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content | default: "What would you like to say?" }}" style="resize: vertical"></textarea>
+      </label>
+
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
       <input type="hidden" name="_subject" value="{{ site.text.contact.subject | default: "New submission!" }}" />
       <input type="text" name="_gotcha" style="display:none" />
